--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,36 @@
-<h1>{{ title }}</h1>
-<ul>
+<h1 class="title animate__bounceIn">{{ title }}</h1>
+<ul class="animate__flipInX" *ngIf="mode == 'list'">
   <p *ngIf="todos.length == 0"><small>Não tem nenhuma tarefa hoje</small></p>
   <li *ngFor="let todo of todos">
-    {{ todo.id }}. {{ todo.title }} -
+    {{ todo.title }} -
     <button (click)="remove(todo)">REMOVER</button> |
     <button *ngIf="!todo.done" (click)="markAsDone(todo)">CONCLUIR</button> |
     <button *ngIf="todo.done" (click)="markAsUndone(todo)">REFAZER</button> |
   </li>
 </ul>
 
-<form [formGroup]="form">
-  <fieldset>
-    <label>Tarefa: </label>
-    <input 
-      type="text" 
-      placeholder="Título da Tarefa" 
-      maxlength="60" 
-      formControlName="title">
-    <small *ngIf="form.controls.title.invalid && !form.controls.title.pristine">Este campo deve conter entre 3 e 60 caracteres</small> <!-- pristine verifica se o control selecionado ja foi modificado !-->
-    <button [disabled]="form.invalid" (click)="add()">Salvar</button>
-  </fieldset>
-</form>
+
+<div id="modal" *ngIf="mode == 'add'" class="animate__flipInX">	
+  <form [formGroup]="form">
+    <fieldset>
+      <label>Tarefa: </label>
+      <input 
+        type="text" 
+        placeholder="Título da Tarefa" 
+        maxlength="60" 
+        formControlName="title">
+      <small *ngIf="form.controls.title.invalid && !form.controls.title.pristine">Este campo deve conter entre 3 e 60 caracteres</small> <!-- pristine verifica se o control selecionado ja foi modificado !-->
+      <button class="button" [disabled]="form.invalid" (click)="add()">Salvar</button>
+    </fieldset>
+  </form>
+</div>
+
+<button class="add-button animated fadeInUp button" (click)="changeMode('add')" *ngIf="mode == 'list'">
+  <i class="fas fa-plus-circle"></i>
+  NOVA TAFEFA
+</button>
+
+<button class="add-button animated fadeInUp button" (click)="changeMode('list')" *ngIf="mode == 'add'">
+  <i class="fas fa-times"></i>
+  CANCELAR
+</button>
